# rust-lang

./: .gitignore  README.md
actix-api/: Cargo.toml
actix-api/src/: main.rs
arithmetic/: Cargo.toml
arithmetic/src/: main.rs
arr-tup/: Cargo.toml
arr-tup/src/: main.rs
associated-types/src/: main.rs
barycenter/: Cargo.toml
barycenter/src/: bodies.rs  main.rs
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs  main.rs
borrowing/: Cargo.toml
borrowing/src/: main.rs
bucketize/: Cargo.toml
bucketize/src/: lib.rs
bucketize/tests/: integration-test.rs
chat-app/client/: Cargo.toml
chat-app/server/: Cargo.toml
closure/: Cargo.toml
closure/src/: main.rs
concepts/: Cargo.toml
concepts/src/: main.rs
control_flow/: Cargo.toml
data-types/: Cargo.toml
enums/: Cargo.toml
fibonacci/: Cargo.toml
functions/: Cargo.toml
fundamentals/: Cargo.toml
guess/: Cargo.toml
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
hello_rust/: main.rs
ip_sniffer/: Cargo.toml
iterators/: Cargo.toml
lambda_qrcode/: Cargo.toml  Dockerfile
lambda_qrcode/examples/: payload_png.json
lambda_qrcode/src/: main.rs
markup-language/: Cargo.toml
natural_language_comparison/: Cargo.toml
ownership/: Cargo.toml
rocket-api/: Cargo.toml
shared-exclusive-access/: Cargo.toml
sierpinski-triangle/: Cargo.toml
slice-type/: Cargo.toml
slices-strs/: Cargo.toml
snake_game/: Cargo.toml
static-kiss/: Cargo.toml
structs/: Cargo.toml
threads/: Cargo.toml
traits/: Cargo.toml
traits-interfaces/: Cargo.toml
welcome_back/: Cargo.toml
(+34 files in other folders)
