[package]
name = "blockchain"
version = "0.1.0"
authors = ["Douglas Alves <douglas.alves@blu365.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.0"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "0.7.0"