[package]
name = "lambda_qrcode"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.1"
image = "0.24"
lambda_runtime = "0.7"
qrcode = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }